feat: kafka event for flow and add common modue